GNOME Bugzilla – Bug 784935
websocket-connection: avoid printing debug message when there is no error
Last modified: 2017-07-17 14:34:51 UTC
This is something I spotted when having a look at the code.
Created attachment 355566 [details] [review] websocket-connection: avoid printing debug message when there is no error
Attachment 355566 [details] pushed as 7cd1e32 - websocket-connection: avoid printing debug message when there is no error