websocket-connection: avoid printing debug message when there is no error

https://bugzilla.gnome.org/show_bug.cgi?id=784935